    because the libnepomukquery headers were moved.

  [ Karl Ferdinand Ebert ]
  * update German translation.

  [ Pino Toscano ]
  * Add patch 29_hurd_support.diff to hopefully fix (even if not in the most
    elegant way) the compilation on GNU/Hurd.
  * Replace unused libtiff4-dev build-depend with zlib1g-dev and libjpeg-dev.

  [ Sune Vuorela ]
  * Add patch to change a include to a forward declaration to avoid exposing
    attica-headers to the world. Note that this makes us slightly source
    incompatible with the rest of the world, but actually it just exposes
    missing includes in other places.

  [ Ferdinand Thommes ]
  * Added missing copyrightholders to the respective sections.
  * Added new sections for kdewebkit and kunitconversion.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 05 Mar 2010 02:11:47 +0100

kde4libs (4:4.3.4-3) unstable; urgency=medium

  * Add -ffunction-sections to C(XX)FLAGS on ia64 in order to fix FTBFS.

 -- Modestas Vainius <modax@debian.org>  Fri, 19 Feb 2010 09:44:22 -0700

kde4libs (4:4.3.4-2) unstable; urgency=emergency

  * Fix libplasma3 symbols file (Closes: #570041).
  * Pass CMAKE_SKIP_RPATH=ON to cmake.
  * Urgency=emergency - needed for transition.

 -- Modestas Vainius <modax@debian.org>  Thu, 18 Feb 2010 15:19:16 +0200

kde4libs (4:4.3.4-1) unstable; urgency=low

  * New upstream release.
    - includes proper fixes for khtml show hide issue. (Closes: 553288)

  +++ Changes by George Kiagiadakis:

  * Add patch to make konsole work on GNU/kFreeBSD.

  +++ Changes by Xavier Vello:

  * Add patch to find KDE3 documentation on khelpcenter4

  +++ Changes by Modestas Vainius:

  * Update debian/patches:
    - 01_r1032787_khtml_show_hide_fix - remove, taken from upstream;
    - 02_r1032185_threading_issues_in_klocale - remove, taken from upstream;
    - 08_add_debian_build_type - refresh, offsets adjusted;
    - 14_hardcode_ptm_device - refresh, offsets adjusted;