@@ -1,6 +1,6 @@
 --- a/kdewidgets/CMakeLists.txt
 +++ b/kdewidgets/CMakeLists.txt
-@@ -55,7 +55,7 @@ if(NOT WIN32)
+@@ -54,7 +54,7 @@
                         )
  endif(NOT WIN32)
  
@@ -9,3 +9,12 @@
  
  if (QT_QT3SUPPORT_FOUND)
    
+@@ -88,7 +88,7 @@
+                            )
+    endif(NOT WIN32)
+ 
+-   install(TARGETS kde3supportwidgets  DESTINATION ${PLUGIN_INSTALL_DIR}/plugins/designer )
++   install(TARGETS kde3supportwidgets  DESTINATION /usr/lib/qt4/plugins/designer )
+ endif (QT_QT3SUPPORT_FOUND)
+ 
+ 
